build: tried smth

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ jobs:
         id: sbt
         uses: lokkju/github-action-sbt@master
         with:
-          commands:
-            sbt clean coverage test coverageReport
+          commands: sbt clean coverage test coverageReport
 #            sbt coverageReport coveralls
 #          sbt_project_directory: ./test
