--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,13 @@ jobs:
           - version: "2.13.3"
     name: build and test project
     steps:
-      - name: SBT action
-        id: sbt
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: sbt build
         uses: lokkju/github-action-sbt@master
         with:
-          commands: test
+          commands: build
+      - name: sbt test
+        uses: lokkju/github-action-sbt@master
+        with:
+          commands: test  
