--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run tests
-      run: sbt coverage test
+      run: sbt clean coverage test coverageReport
     - name: Coverage Report
-      run: sbt coverageReport
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
-      with:
-        fail_ci_if_error: true
+      run: sbt coverageReport coveralls
